--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "@ads/shared",
   "version": "0.0.1",
-  "exports": {
-    "./time": "./build/time/index.js"
-  },
+  "main": "build/index.js",
+  "module": "build/index.mjs",
   "types": "build/types/index.d.ts",
   "files": [
     "build"
@@ -13,37 +12,16 @@
   "scripts": {
     "build:clean": "rimraf build",
     "build": "npx tsc",
-    "build:silent": "npx rimraf build && npx rollup -c --silent",
-    "dev": "rollup -c -w",
-    "test": "vitest run",
-    "testw": "vitest",
-    "coverage": "vitest run --coverage",
     "lint": "eslint --fix src --ext .js,.jsx,.ts,.tsx --cache --quiet",
     "doc": "npx typedoc src/index.ts"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.7",
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^24.0.1",
-    "@rollup/plugin-terser": "^0.4.0",
-    "@rollup/plugin-typescript": "^11.0.0",
     "@types/node": "^16.11.11",
-    "babel-loader": "^8.3.0",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-es2015": "^6.24.1",
     "jsdom": "^20.0.0",
     "plop": "^3.1.1",
     "rimraf": "^3.0.2",
-    "rollup": "^3.11.0",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-dts": "^5.1.1",
-    "rollup-plugin-import-css": "^3.1.0",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-progress": "^1.1.2",
-    "rollup-plugin-typescript2": "^0.34.1",
     "tslib": "^2.5.0",
     "typedoc": "^0.24.6",
-    "typescript": "^5.0.4",
-    "vitest": "^0.23.1"
+    "typescript": "^5.0.4"
   }
 }
