--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "build:clean": "rimraf build",
     "build": "npx tsc",
     "lint": "eslint --fix src --ext .js,.jsx,.ts,.tsx --cache --quiet",
-    "doc": "npx typedoc src/index.ts"
+    "doc": "npx typedoc --options typedoc.json"
   },
   "devDependencies": {
     "@types/node": "^16.11.11",
+    "@types/react": "^18.2.5",
     "jsdom": "^20.0.0",
     "plop": "^3.1.1",
     "rimraf": "^3.0.2",
     "tslib": "^2.5.0",
     "typedoc": "^0.24.6",
     "typescript": "^5.0.4"
+  },
+  "peerDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
