--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
     "rimraf": "^3.0.2",
     "tslib": "^2.5.0",
     "typedoc": "^0.24.6",
-    "typescript": "^5.0.4"
-  },
-  "peerDependencies": {
+    "typescript": "^5.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
